--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -68,7 +69,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
                 <div class="timeline-date">2023</div>
-                <div class="timeline-content">
+                <div class="timeline-content" data-aos="fade-up">
                     <h3>Occident Grammar School</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
                 </div>
@@ -76,7 +77,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
                 <div class="timeline-date">2023</div>
-                <div class="timeline-content">
+                <div class="timeline-content" data-aos="fade-up">
                     <h3>Occident Grammar School</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
                 </div>
@@ -84,7 +85,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
                 <div class="timeline-date">2023</div>
-                <div class="timeline-content">
+                <div class="timeline-content" data-aos="fade-up">
                     <h3>Occident Grammar School</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
                 </div>
@@ -92,7 +93,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
                 <div class="timeline-date">2023</div>
-                <div class="timeline-content">
+                <div class="timeline-content" data-aos="fade-up">
                     <h3>Occident Grammar School</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
                 </div>
@@ -108,28 +109,28 @@
         <h2 class="heading">Services</h2>
 
         <div class="services-container">
-            <div class="services-box">
+            <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>UI Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
                 </div>
             </div>
 
-            <div class="services-box">
+            <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>Frontend Development</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
                 </div>
             </div>
 
-            <div class="services-box">
+            <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>Frontend Development</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
                 </div>
             </div>
 
-            <div class="services-box">
+            <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>UI Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
@@ -147,7 +148,7 @@
             <h2 class="heading">Testimonials</h2>
 
             <div class="wrapper">
-                <div class="testimonials-items">
+                <div class="testimonials-items" data-aos="fade-up">
                     <img src="images/img1.jpg">
                     <h2>Babar Azam</h2>
                     <div class="rating">
@@ -160,7 +161,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odio amet ratione eius repellat minus porro dolorum, repudiandae sint quasi itaque earum vero. Eaque, nihil? Aliquam deserunt quo reiciendis veritatis.</p>
                 </div>
 
-                <div class="testimonials-items">
+                <div class="testimonials-items" data-aos="fade-up">
                     <img src="images/img2.jpg">
                     <h2>M.Amir</h2>
                     <div class="rating">
@@ -173,7 +174,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odio amet ratione eius repellat minus porro dolorum, repudiandae sint quasi itaque earum vero. Eaque, nihil? Aliquam deserunt quo reiciendis veritatis.</p>
                 </div>
 
-                <div class="testimonials-items">
+                <div class="testimonials-items" data-aos="fade-up">
                     <img src="images/img3.jpg">
                     <h2>Virat Kohli</h2>
                     <div class="rating">
@@ -201,18 +202,18 @@
         <form>
             <div class="input-group">
                 <div class="input-box">
-                    <input type="text" placeholder="Full Name">
-                    <input type="email" placeholder="Email">
+                    <input type="text" placeholder="Full Name" data-aos="fade-up">
+                    <input type="email" placeholder="Email" data-aos="fade-up">
                 </div>
                 <div class="input-box">
-                    <input type="number" placeholder="Phone Number">
-                    <input type="text" placeholder="Subject">
+                    <input type="number" placeholder="Phone Number" data-aos="fade-up">
+                    <input type="text" placeholder="Subject" data-aos="fade-up">
                 </div>
             </div>
 
             <div class="input-group-2">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-                <input type="submit" value="Send Message" class="btn"> 
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" data-aos="fade-up"></textarea>
+                <input type="submit" value="Send Message" class="btn" data-aos="fade-up"> 
             </div>
 
         </form>
@@ -222,7 +223,7 @@
 
     <!-- Footer -->
 
-    <footer class="footer">
+    <footer class="footer" data-aos="fade-up">
 
         <div class="social">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -257,6 +258,13 @@
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1000,
+        offset: 200
+      });
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
