--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,7 +16,7 @@
 
     <!-- Navbar -->
 
-    <header class="header" data-aos="fade-down">
+    <header class="header">
         <a href="#home" class="logo">Abdul
             <span>Rafay</span>
         </a>
@@ -37,7 +36,7 @@
     <!-- Section Content -->
 
     <section class="home" id="home">
-        <div class="home-content animate__animated animate__backInLeft">
+        <div class="home-content">
             <h1>Hi, It's <span>Abdul Rafay</span></h1>
             <h3 class="text-animation">I'm a <span></span></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur vel officia animi asperiores facilis non mollitia ea deleniti ipsa qui, voluptatem, cupiditate ipsum cumque! Illo numquam veniam laudantium praesentium ea?</p>
@@ -55,7 +54,7 @@
             </div>
         </div>
 
-        <div class="home-img animate__animated animate__backInRight">
+        <div class="home-img">
             <img src="images/image.jpg">
         </div>
     </section>
@@ -70,7 +69,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
                 <div class="timeline-date">2023</div>
-                <div class="timeline-content" data-aos="fade-right">
+                <div class="timeline-content" data-aos="fade-up">
                     <h3>Occident Grammar School</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
                 </div>
@@ -78,7 +77,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
                 <div class="timeline-date">2023</div>
-                <div class="timeline-content" data-aos="fade-left">
+                <div class="timeline-content" data-aos="fade-up">
                     <h3>Occident Grammar School</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
                 </div>
@@ -86,7 +85,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
                 <div class="timeline-date">2023</div>
-                <div class="timeline-content" data-aos="fade-right">
+                <div class="timeline-content" data-aos="fade-up">
                     <h3>Occident Grammar School</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
                 </div>
@@ -94,7 +93,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
                 <div class="timeline-date">2023</div>
-                <div class="timeline-content" data-aos="fade-left">
+                <div class="timeline-content" data-aos="fade-up">
                     <h3>Occident Grammar School</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
                 </div>
@@ -110,28 +109,28 @@
         <h2 class="heading">Services</h2>
 
         <div class="services-container">
-            <div class="services-box" data-aos="fade-right">
+            <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>UI Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
                 </div>
             </div>
 
-            <div class="services-box" data-aos="fade-left">
+            <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>Frontend Development</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
                 </div>
             </div>
 
-            <div class="services-box" data-aos="fade-right">
+            <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>Frontend Development</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
                 </div>
             </div>
 
-            <div class="services-box" data-aos="fade-left">
+            <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>UI Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
@@ -203,18 +202,18 @@
         <form>
             <div class="input-group">
                 <div class="input-box">
-                    <input type="text" placeholder="Full Name" data-aos="fade-right">
-                    <input type="email" placeholder="Email" data-aos="fade-right">
+                    <input type="text" placeholder="Full Name" data-aos="fade-up">
+                    <input type="email" placeholder="Email" data-aos="fade-up">
                 </div>
                 <div class="input-box">
-                    <input type="number" placeholder="Phone Number" data-aos="fade-right">
-                    <input type="text" placeholder="Subject" data-aos="fade-right">
+                    <input type="number" placeholder="Phone Number" data-aos="fade-up">
+                    <input type="text" placeholder="Subject" data-aos="fade-up">
                 </div>
             </div>
 
             <div class="input-group-2">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" data-aos="fade-left"></textarea>
-                <input type="submit" value="Send Message" class="btn" data-aos="fade-left"> 
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" data-aos="fade-up"></textarea>
+                <input type="submit" value="Send Message" class="btn" data-aos="fade-up"> 
             </div>
 
         </form>
@@ -258,6 +257,7 @@
     </footer>
     
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
