--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +17,7 @@
 
     <!-- Navbar -->
 
-    <header class="header">
+    <header class="header" data-aos="fade-down">
         <a href="#home" class="logo">Abdul
             <span>Rafay</span>
         </a>
@@ -35,7 +36,7 @@
 
     <!-- Section Content -->
 
-    <section class="home" id="home">
+    <section class="home" id="home" data-aos="fade-up">
         <div class="home-content">
             <h1>Hi, It's <span>Abdul Rafay</span></h1>
             <h3 class="text-animation">I'm a <span></span></h3>
