--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <nav class="navbar">
             <a href="#home" class="active" id="ad">Home</a>
             <a href="#education"id="ad">Education</a>
-            <a href="#services" id="ad">Services</a>
-            <a href="#testimonials" id="ad">Testimonials</a>
+            <a href="#expertise" id="ad">Expertise</a>
+            <a href="#projects" id="ad">Projects</a>
             <a href="#contact" id="ad">Contact</a>
         </nav>
     </header>
@@ -40,7 +40,7 @@
         <div class="home-content">
             <h1>Hi, It's <span>Abdul Rafay</span></h1>
             <h3 class="text-animation">I'm a <span></span></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur vel officia animi asperiores facilis non mollitia ea deleniti ipsa qui, voluptatem, cupiditate ipsum cumque! Illo numquam veniam laudantium praesentium ea?</p>
+            <p>As a dedicated student of Aptech MSG, I have been studying web development for over a year. I aim to leverage my skills in HTML, CSS, and JavaScript to contribute effectively to a dynamic team while continuing to grow as a developer.</p>
 
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -50,13 +50,13 @@
             </div>
 
             <div class="btn-group">
-                <a href="#" class="btn">Hire</a>
-                <a href="#contact" class="btn">Contact</a>
+                <a href="CV Abdul Rafay.pdf" target="_blank" class="btn">Download CV</a>
+                <a href="https://wa.me/03118447717" target="_blank" class="btn">Contact</a>
             </div>
         </div>
 
         <div class="home-img">
-            <img src="images/image.jpg">
+            <img src="images/image.jpeg">
         </div>
     </section>
 
@@ -72,31 +72,15 @@
                 <div class="timeline-date">2023</div>
                 <div class="timeline-content" data-aos="fade-up">
                     <h3>Occident Grammar School</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
+                    <p>A dedicated and detail-oriented individual with an A1 grade in matriculation from Occident Grammar School, seeking to leverage strong academic foundations and a passion for learning in a dynamic and growth-oriented environment. Eager to contribute skills in design while continuing to develop professionally.</p>
                 </div>
         </div>
         <div class="timeline-item">
             <div class="timeline-dot"></div>
-                <div class="timeline-date">2023</div>
+                <div class="timeline-date">2024</div>
                 <div class="timeline-content" data-aos="fade-up">
-                    <h3>Occident Grammar School</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
-                </div>
-        </div>
-        <div class="timeline-item">
-            <div class="timeline-dot"></div>
-                <div class="timeline-date">2023</div>
-                <div class="timeline-content" data-aos="fade-up">
-                    <h3>Occident Grammar School</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
-                </div>
-        </div>
-        <div class="timeline-item">
-            <div class="timeline-dot"></div>
-                <div class="timeline-date">2023</div>
-                <div class="timeline-content" data-aos="fade-up">
-                    <h3>Occident Grammar School</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ipsam ipsum quia tenetur quaerat, hic magnam dolore obcaecati ut. Ullam iusto consequatur hic fugiat atque dolore consequuntur totam tempora aut?</p>
+                    <h3>Aptech MSG</h3>
+                    <p>As a dedicated student of Aptech MSG, I have been studying web development for over a year. I aim to leverage my skills in HTML, CSS, and JavaScript to contribute effectively to a dynamic team while continuing to grow as a developer.</p>
                 </div>
         </div>
 
@@ -106,86 +90,50 @@
 
     <!-- Services Content -->
 
-    <section class="services" id="services">
-        <h2 class="heading">Services</h2>
+    <section class="services" id="expertise">
+        <h2 class="heading">Experties</h2>
 
         <div class="services-container">
             <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>UI Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
                 </div>
             </div>
 
             <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>Frontend Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
                 </div>
             </div>
 
-            <div class="services-box" data-aos="fade-up">
-                <div class="services-info">
-                    <h4>Frontend Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
-                </div>
-            </div>
-
-            <div class="services-box" data-aos="fade-up">
-                <div class="services-info">
-                    <h4>UI Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi, sit vero a quas pariatur temporibus corporis delectus placeat totam omnis velit ullam illo iure incidunt ab, iste voluptatum ea?</p>
-                </div>
-            </div>
         </div>
     </section>
 
 
     <!-- Testimonials Content -->
 
-    <section class="testimonials" id="testimonials">
+    <section class="testimonials" id="projects">
 
         <div class="testimonials-box">
-            <h2 class="heading">Testimonials</h2>
+            <h2 class="heading">My Projects</h2>
 
             <div class="wrapper">
                 <div class="testimonials-items" data-aos="fade-up">
-                    <img src="images/img1.jpg">
-                    <h2>Babar Azam</h2>
-                    <div class="rating">
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star" id="star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odio amet ratione eius repellat minus porro dolorum, repudiandae sint quasi itaque earum vero. Eaque, nihil? Aliquam deserunt quo reiciendis veritatis.</p>
+                    <img src="images/img1.JPG">
+                    <h2>Amazon Clone</h2>
+                    <a href="https://arabdulrafay.github.io/Amazon/" target="_blank">Click here to see Web!</a>
                 </div>
 
                 <div class="testimonials-items" data-aos="fade-up">
-                    <img src="images/img2.jpg">
-                    <h2>M.Amir</h2>
-                    <div class="rating">
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star-half-stroke" id="star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odio amet ratione eius repellat minus porro dolorum, repudiandae sint quasi itaque earum vero. Eaque, nihil? Aliquam deserunt quo reiciendis veritatis.</p>
+                    <img src="images/img2.JPG">
+                    <h2>Weather Web</h2>
+                    <a href="https://arabdulrafay.github.io/Weather-Web/" target="_blank">Click here to see Web!</a>
                 </div>
 
                 <div class="testimonials-items" data-aos="fade-up">
-                    <img src="images/img3.jpg">
-                    <h2>Virat Kohli</h2>
-                    <div class="rating">
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-solid fa-star" id="star"></i>
-                        <i class="fa-regular fa-star" id="star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odio amet ratione eius repellat minus porro dolorum, repudiandae sint quasi itaque earum vero. Eaque, nihil? Aliquam deserunt quo reiciendis veritatis.</p>
+                    <img src="images/img3.JPG">
+                    <h2>University Web</h2>
+                    <a href="https://arabdulrafay.github.io/University-Web/" target="_blank">Click here to see Web!</a>
                 </div>
 
             </div>
@@ -204,10 +152,10 @@
             <div class="input-group">
                 <div class="input-box">
                     <input type="text" placeholder="Full Name" data-aos="fade-up">
-                    <input type="email" placeholder="Email" data-aos="fade-up">
+                    <input type="email" placeholder="rafayansari110@gmailcom" data-aos="fade-up">
                 </div>
                 <div class="input-box">
-                    <input type="number" placeholder="Phone Number" data-aos="fade-up">
+                    <input type="number" placeholder="03118447717" data-aos="fade-up">
                     <input type="text" placeholder="Subject" data-aos="fade-up">
                 </div>
             </div>
@@ -224,7 +172,7 @@
 
     <!-- Footer -->
 
-    <footer class="footer" data-aos="fade-up">
+    <footer class="footer">
 
         <div class="social">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
