--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="btn-group">
-                <a href="CV Abdul Rafay.pdf" target="_blank" class="btn">Download CV</a>
+                <a href="CV Abdul Rafay.pdf" target="_blank" class="btn">See my CV</a>
                 <a href="https://wa.me/03118447717" target="_blank" class="btn">Contact</a>
             </div>
         </div>
@@ -119,19 +119,19 @@
 
             <div class="wrapper">
                 <div class="testimonials-items" data-aos="fade-up">
-                    <img src="images/img1.JPG">
+                    <img src="images/img1.JPG" alt="Web Image">
                     <h2>Amazon Clone</h2>
                     <a href="https://arabdulrafay.github.io/Amazon/" target="_blank">Click here to see Web!</a>
                 </div>
 
                 <div class="testimonials-items" data-aos="fade-up">
-                    <img src="images/img2.JPG">
+                    <img src="images/img2.JPG" alt="Web Image">
                     <h2>Weather Web</h2>
                     <a href="https://arabdulrafay.github.io/Weather-Web/" target="_blank">Click here to see Web!</a>
                 </div>
 
                 <div class="testimonials-items" data-aos="fade-up">
-                    <img src="images/img3.JPG">
+                    <img src="images/img3.JPG" alt="Web Image">
                     <h2>University Web</h2>
                     <a href="https://arabdulrafay.github.io/University-Web/" target="_blank">Click here to see Web!</a>
                 </div>
