--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="btn-group">
-                <a href="CV Abdul Rafay.pdf" target="_blank" class="btn">See my CV</a>
+                <a href="Abdul Rafay.pdf" target="_blank" class="btn">See my CV</a>
                 <a href="https://wa.me/03118447717" target="_blank" class="btn">Contact</a>
             </div>
         </div>
