--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
 
             <div class="wrapper">
                 <div class="testimonials-items" data-aos="fade-up">
-                    <img src="images/img1.JPG" alt="Web Image">
+                    <img src="./images/img1.JPG" alt="Web Image">
                     <h2>Amazon Clone</h2>
                     <a href="https://arabdulrafay.github.io/Amazon/" target="_blank">Click here to see Web!</a>
                 </div>
 
                 <div class="testimonials-items" data-aos="fade-up">
-                    <img src="images/img2.JPG" alt="Web Image">
+                    <img src="./images/img2.JPG" alt="Web Image">
                     <h2>Weather Web</h2>
                     <a href="https://arabdulrafay.github.io/Weather-Web/" target="_blank">Click here to see Web!</a>
                 </div>
 
                 <div class="testimonials-items" data-aos="fade-up">
-                    <img src="images/img3.JPG" alt="Web Image">
+                    <img src="./images/img3.JPG" alt="Web Image">
                     <h2>University Web</h2>
                     <a href="https://arabdulrafay.github.io/University-Web/" target="_blank">Click here to see Web!</a>
                 </div>
