--- a/index.html
+++ b/index.html
@@ -96,16 +96,39 @@
         <div class="services-container">
             <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
-                    <h4>UI Design</h4>
+                    <h4>HTML</h4>
                 </div>
             </div>
 
             <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
-                    <h4>Frontend Development</h4>
+                    <h4>CSS</h4>
                 </div>
             </div>
 
+            <div class="services-box" data-aos="fade-up">
+                <div class="services-info">
+                    <h4>JavaScript</h4>
+                </div>
+            </div>
+
+            <div class="services-box" data-aos="fade-up">
+                <div class="services-info">
+                    <h4>Bootstrap</h4>
+                </div>
+            </div>
+
+            <div class="services-box" data-aos="fade-up">
+                <div class="services-info">
+                    <h4>Git</h4>
+                </div>
+            </div>
+
+            <div class="services-box" data-aos="fade-up">
+                <div class="services-info">
+                    <h4>JSON</h4>
+                </div>
+            </div>
         </div>
     </section>
 
