--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
 
             <div class="btn-group">
@@ -171,21 +171,42 @@
 
         <h2 class="heading">Contact <span>Me</span></h2>
 
+        <div class="contact-items" data-aos="fade-up">
+            <div class="cols">
+                <i class="fa fa-home"></i>
+                <span>
+                    <p>Karachi, Pakistan</p>
+                </span>
+            </div>
+            <div class="cols">
+                <i class="fa fa-phone"></i>
+                <span>
+                    <p>+92 3118447717</p>
+                </span>
+            </div>
+            <div class="cols">
+                <i class="fa fa-envelope"></i>
+                <span>
+                    <p>rafayansari110@gmail.com</p>
+                </span>
+            </div>
+        </div>
+
         <form>
-            <div class="input-group">
+            <div class="input-group" data-aos="fade-up">
                 <div class="input-box">
-                    <input type="text" placeholder="Full Name" data-aos="fade-up">
-                    <input type="email" placeholder="rafayansari110@gmailcom" data-aos="fade-up">
+                    <input type="text" placeholder="Enter Full Name">
+                    <input type="email" placeholder="Enter Email">
                 </div>
                 <div class="input-box">
-                    <input type="number" placeholder="03118447717" data-aos="fade-up">
-                    <input type="text" placeholder="Subject" data-aos="fade-up">
+                    <input type="number" placeholder="Enter Number">
+                    <input type="text" placeholder="Subject">
                 </div>
             </div>
 
-            <div class="input-group-2">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" data-aos="fade-up"></textarea>
-                <input type="submit" value="Send Message" class="btn" data-aos="fade-up"> 
+            <div class="input-group-2" data-aos="fade-up">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn"> 
             </div>
 
         </form>
@@ -203,24 +224,6 @@
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
         </div>
-
-        <ul>
-            <li>
-                <a href="#">FAQ</a>
-            </li>
-            <li>
-                <a href="#">Services</a>
-            </li>
-            <li>
-                <a href="#">About Me</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-            <li>
-                <a href="#">Testimonials</a>
-            </li>
-        </ul>
 
         <p class="copyright">
             &copy; Abdul Rafay | All Rights Reserved
