--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="home-content">
             <h1>Hi, It's <span>Abdul Rafay</span></h1>
             <h3 class="text-animation">I'm a <span></span></h3>
-            <p>As a dedicated student of Aptech MSG, I have been studying web development for over a year. I aim to leverage my skills in HTML, CSS, and JavaScript to contribute effectively to a dynamic team while continuing to grow as a developer.</p>
+            <p>As a dedicated student at Aptech MSG with over a year of experience in web development, I aim to apply my skills in HTML, CSS, and JavaScript, along with my foundational knowledge of MySQL, PHP, Laravel, and React.js, to contribute effectively to dynamic projects. I am committed to continuous learning and professional growth while delivering value to my team and organization.</p>
 
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -127,6 +127,24 @@
             <div class="services-box" data-aos="fade-up">
                 <div class="services-info">
                     <h4>JSON</h4>
+                </div>
+            </div>
+
+            <div class="services-box" data-aos="fade-up">
+                <div class="services-info">
+                    <h4>MySQL</h4>
+                </div>
+            </div>
+
+            <div class="services-box" data-aos="fade-up">
+                <div class="services-info">
+                    <h4>PHP</h4>
+                </div>
+            </div>
+
+            <div class="services-box" data-aos="fade-up">
+                <div class="services-info">
+                    <h4>Laravel</h4>
                 </div>
             </div>
         </div>
