--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
             <p>As a dedicated student at Aptech MSG with over a year of experience in web development, I aim to apply my skills in HTML, CSS, and JavaScript, along with my foundational knowledge of MySQL, PHP, Laravel, and React.js, to contribute effectively to dynamic projects. I am committed to continuous learning and professional growth while delivering value to my team and organization.</p>
 
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="www.linkedin.com/in/abdul-rafay-4196a7335" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/ar._.abdul._.rafay/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100029315534631" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </div>
 
             <div class="btn-group">
@@ -237,10 +236,9 @@
     <footer class="footer">
 
         <div class="social">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="www.linkedin.com/in/abdul-rafay-4196a7335" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/ar._.abdul._.rafay/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100029315534631" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
 
         <p class="copyright">
