--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="btn-group">
                 <a href="Abdul Rafay.pdf" target="_blank" class="btn">See my CV</a>
-                <a href="https://wa.me/03118447717" target="_blank" class="btn">Contact</a>
+                <a href="https://wa.me/+923118447717" target="_blank" class="btn">Contact</a>
             </div>
         </div>
 
@@ -209,20 +209,21 @@
             </div>
         </div>
 
-        <form>
+        <form action="https://api.web3forms.com/submit" method="post">
+            <input type="hidden" name="access_key" value="47e79e01-ade7-4ea0-8f77-220c35c9106f">
             <div class="input-group" data-aos="fade-up">
                 <div class="input-box">
-                    <input type="text" placeholder="Enter Full Name">
-                    <input type="email" placeholder="Enter Email">
+                    <input type="text" name="name" placeholder="Enter Full Name" required>
+                    <input type="email" name="email" placeholder="Enter Email" required>
                 </div>
                 <div class="input-box">
-                    <input type="number" placeholder="Enter Number">
-                    <input type="text" placeholder="Subject">
+                    <input type="number" name="number" placeholder="Enter Number" required>
+                    <input type="text" name="subject" placeholder="Subject" required>
                 </div>
             </div>
 
             <div class="input-group-2" data-aos="fade-up">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
                 <input type="submit" value="Send Message" class="btn"> 
             </div>
 
@@ -236,7 +237,7 @@
     <footer class="footer">
 
         <div class="social">
-            <a href="www.linkedin.com/in/abdul-rafay-4196a7335" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/abdul-rafay-4196a7335/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://www.instagram.com/ar._.abdul._.rafay/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100029315534631" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
