--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>As a dedicated student at Aptech MSG with over a year of experience in web development, I aim to apply my skills in HTML, CSS, and JavaScript, along with my foundational knowledge of MySQL, PHP, Laravel, and React.js, to contribute effectively to dynamic projects. I am committed to continuous learning and professional growth while delivering value to my team and organization.</p>
 
             <div class="social-icons">
-                <a href="www.linkedin.com/in/abdul-rafay-4196a7335" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/abdul-rafay-4196a7335/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/ar._.abdul._.rafay/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100029315534631" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </div>
