--- a/index.html
+++ b/index.html
@@ -40,17 +40,21 @@
         <div class="home-content">
             <h1>Hi, It's <span>Abdul Rafay</span></h1>
             <h3 class="text-animation">I'm a <span></span></h3>
-            <p>As a dedicated student at Aptech MSG with over a year of experience in web development, I aim to apply my skills in HTML, CSS, and JavaScript, along with my foundational knowledge of MySQL, PHP, Laravel, and React.js, to contribute effectively to dynamic projects. I am committed to continuous learning and professional growth while delivering value to my team and organization.</p>
+            <p>I'm a passionate Web Developer currently pursuing my studies at Aptech Metro Star Gate. I specialize in building responsive and user-friendly websites using HTML, CSS, JavaScript, Bootstrap, and PHP.
+
+                I have hands-on experience working with the Laravel framework, along with knowledge of MySQL, JSON, Git, and GitHub for version control and database-driven development. I'm also exploring React.js to create dynamic and interactive frontend components.
+                
+                I’m always excited to learn new technologies, take on challenges, and bring creative ideas to life through code.</p>
 
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/abdul-rafay-4196a7335/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/abdul-rafay-63736435b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/ar._.abdul._.rafay/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100029315534631" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </div>
 
             <div class="btn-group">
                 <a href="Abdul Rafay.pdf" target="_blank" class="btn">See my CV</a>
-                <a href="https://wa.me/+923118447717" target="_blank" class="btn">Contact</a>
+                <a href="https://wa.me/+923157364783" target="_blank" class="btn">Contact</a>
             </div>
         </div>
 
@@ -79,7 +83,9 @@
                 <div class="timeline-date">2024</div>
                 <div class="timeline-content" data-aos="fade-up">
                     <h3>Aptech MSG</h3>
-                    <p>As a dedicated student of Aptech MSG, I have been studying web development for over a year. I aim to leverage my skills in HTML, CSS, and JavaScript to contribute effectively to a dynamic team while continuing to grow as a developer.</p>
+                    <p>I'm a passionate Web Developer currently pursuing my studies at Aptech Metro Star Gate. I specialize in building responsive and user-friendly websites using HTML, CSS, JavaScript, Bootstrap, and PHP.
+
+                        I have hands-on experience working with the Laravel framework, along with knowledge of MySQL, JSON, Git, and GitHub for version control and database-driven development. I'm also exploring React.js to create dynamic and interactive frontend components.</p>
                 </div>
         </div>
 
@@ -198,7 +204,7 @@
             <div class="cols">
                 <i class="fa fa-phone"></i>
                 <span>
-                    <p>+92 3118447717</p>
+                    <p>+92 3157364783</p>
                 </span>
             </div>
             <div class="cols">
@@ -237,7 +243,7 @@
     <footer class="footer">
 
         <div class="social">
-            <a href="https://www.linkedin.com/in/abdul-rafay-4196a7335/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/abdul-rafay-63736435b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://www.instagram.com/ar._.abdul._.rafay/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100029315534631" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
